welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  if (estFaceMur==false){
      avance();
      couleurdelacase= getCouleurSol()
      
      couleurDeLaCase match{
        case Color.green => return true
        case Color.white => return false
        case Color.gray => return false
        case _ =>
      }
		
  }

}